kubernetes/dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: shopsphere

  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: shopsphere
    app.kubernetes.io/managed-by: kubectl

spec:

  replicas: 1

  revisionHistoryLimit: 5

  strategy:
    type: RollingUpdate

    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: frontend

  template:

    metadata:

      labels:
        app: frontend
        app.kubernetes.io/name: frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: shopsphere

    spec:

      terminationGracePeriodSeconds: 30

      containers:

      - name: frontend

        image: dineshccs/shopsphere:frontend-0967dc5

        imagePullPolicy: Always

        ports:

        - name: http
          containerPort: 8080

        resources:

          requests:
            cpu: 100m
            memory: 128Mi

          limits:
            cpu: 300m
            memory: 256Mi

        readinessProbe:

          httpGet:
            path: "/"
            port: 8080

          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 3
          failureThreshold: 3

        livenessProbe:

          httpGet:
            path: "/"
            port: 8080

          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
          failureThreshold: 3
