kubernetes/dev/frontend/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: shopsphere

  labels:
    app: frontend
    app.kubernetes.io/name: frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: shopsphere

spec:

  type: NodePort

  selector:
    app: frontend

  ports:

  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
